--- a/README
+++ b/README
@@ -1,22 +1,31 @@
 == SXP for Ruby
 
+This is the Git repository for the Ruby reference implementation of the SXP
+data interchange format.
+
 === About SXP
 
-* http://sxp.rubyforge.org/
+SXP is a data interchange format based on S-expressions, the simplest and
+most versatile known means of representing complex data structures such as
+lists, trees and graphs.
+
 * http://sxp.cc/
 * http://en.wikipedia.org/wiki/S-expression
+
 
 == Download
 
 * http://rubyforge.org/projects/sxp/
 * gem install sxp
-* svn checkout svn://rubyforge.org/var/svn/sxp
-* git clone git://github.com/bendiken/sxp.git
+* git clone git://github.com/bendiken/sxp-ruby.git
+* git clone git://rubyforge.org/sxp.git
+
 
 == Usage
 
   require 'sxp'
   ...
+
 
 == Related Projects
 
@@ -24,9 +33,11 @@
 * http://raa.ruby-lang.org/project/sfsexp/
 * http://rubyforge.org/projects/sexp/
 
+
 == Author
 
 Arto Bendiken (mailto:arto.bendiken@gmail.com) - http://bendiken.net/
+
 
 == License
 
