Reworked README file for GitHub compatibility.

--- a/README
+++ b/README
@@ -1,45 +1,1 @@
-== SXP for Ruby
-
-This is the Git repository for the Ruby reference implementation of the SXP
-data interchange format.
-
-=== About SXP
-
-SXP is a data interchange format based on S-expressions, the simplest and
-most versatile known means of representing complex data structures such as
-lists, trees and graphs.
-
-* http://sxp.cc/
-* http://en.wikipedia.org/wiki/S-expression
-
-
-== Download
-
-* http://rubyforge.org/projects/sxp/
-* gem install sxp
-* git clone git://github.com/bendiken/sxp-ruby.git
-* git clone git://rubyforge.org/sxp.git
-
-
-== Usage
-
-  require 'sxp'
-  ...
-
-
-== Related Projects
-
-* http://rubyforge.org/projects/lisp/
-* http://raa.ruby-lang.org/project/sfsexp/
-* http://rubyforge.org/projects/sexp/
-
-
-== Author
-
-Arto Bendiken (mailto:arto.bendiken@gmail.com) - http://bendiken.net/
-
-
-== License
-
-Released under the terms of the MIT license. See the accompanying LICENSE
-file for more information.
+README.rdoc
